<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginPage"
    android:background="@color/colorPrimary">
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imgAppIcon"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:src="@mipmap/app_icon2"
        android:contentDescription="@string/app_name"
        android:layout_centerHorizontal="true"
        app:civ_border_overlay="true"
        app:civ_border_width="2px"
        app:civ_border_color="@color/colorAccent"
        android:scaleType="centerCrop"
        android:layout_marginTop="25dp"
        />

    <EditText
        android:id="@+id/etEmail"
        android:layout_below="@+id/imgAppIcon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_fieldset"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:inputType="textEmailAddress"
        android:hint="@string/Email"
        android:drawableStart="@drawable/email_ic"
        android:padding="7dp"/>
    <EditText
        android:id="@+id/etPassword"
        android:layout_below="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_fieldset"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:inputType="textPassword"
        android:hint="@string/Password"
        android:drawableStart="@drawable/password_ic"
        android:maxLength="10"
        android:padding="7dp"/>
    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounder_corners"
        android:text="@string/log_in"
        android:textSize="18sp"
        android:textColor="#F6F3F3"
        android:textStyle="bold"
        android:layout_below="@+id/etPassword"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:padding="7dp"/>
    <TextView
        android:id="@+id/txtForgetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_password"
        android:textStyle="italic"
        android:textSize="18sp"
        android:textColor="@color/colorAccent"
        android:layout_below="@+id/btn_login"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:padding="10dp"/>
    <TextView
        android:id="@+id/txtRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/RegisterYourself"
        android:textStyle="italic"
        android:textSize="18sp"
        android:textColor="@color/colorAccent"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:padding="10dp"/>

</RelativeLayout>