<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RegisterPage"
    android:orientation="vertical"
    android:background="@color/colorPrimary">

    <TextView
        android:id="@+id/txtPageTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SignUP"
        android:textSize="48sp"
        android:textColor="@color/colorAccent"
        android:layout_margin="15dp"
        android:padding="7dp"/>
    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_fieldset"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:inputType="text"
        android:hint="@string/Username"
        android:drawableStart="@drawable/user_ic"
        android:maxLength="20"
        android:padding="7dp"/>
    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_fieldset"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:inputType="textEmailAddress"
        android:hint="@string/Email"
        android:drawableStart="@drawable/email_ic"
        android:padding="7dp"/>
    <EditText
        android:id="@+id/etPhoneNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_fieldset"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:inputType="phone"
        android:hint="@string/PhoneNo"
        android:drawableStart="@drawable/phone_ic"
        android:maxLength="10"
        android:padding="7dp"/>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/rounded_fieldset"
        android:drawableStart="@drawable/password_ic"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:maxLength="10"
        android:padding="7dp" />
    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_fieldset"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:inputType="textPassword"
        android:hint="@string/ConfirmPassword"
        android:drawableStart="@drawable/password_ic"
        android:maxLength="10"
        android:padding="7dp"/>
    <Button
        android:id="@+id/btn_SignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounder_corners"
        android:text="@string/SignUP"
        android:textSize="18sp"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:padding="7dp"/>

</LinearLayout>