<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.BookDetails">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/Toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize" />
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/Toolbar"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/llcontent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="6">
            <ImageView
                android:id="@+id/imgBookIcon"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1.5"
                android:padding="5dp"
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_launcher_round"/>
            <RelativeLayout
                android:layout_weight="3.6"
                android:layout_width="0dp"
                android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtBookName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:padding="5dp"
                android:text="@string/bookName"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtCategoryName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/category"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_alignParentBottom="true"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:padding="5dp"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_weight="0.9"
                android:layout_width="0dp"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btnfav"
                    android:layout_width="30dp"
                    android:layout_height="27dp"
                    android:background="@drawable/ic_toggle_fav"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="40dp"
                    android:text=" "
                    android:textOff=" "
                    android:textOn=" " />
                <TextView
                    android:id="@+id/txtRating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/n_a"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:layout_below="@+id/btnfav"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="5dp"
                    android:padding="5dp"
                    android:textColor="#FFC107"/>
            </RelativeLayout>
        </LinearLayout>
        <RelativeLayout
            android:id="@+id/bookDescLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/llcontent"
            android:background="#0F000000">
            <TextView
                android:id="@+id/bookDescTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_the_book"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="#000000"
                android:layout_centerHorizontal="true"
                android:padding="7dp"/>
            <TextView
                android:id="@+id/txtbookDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/book_description"
                android:textSize="18sp"
                android:textColor="#000000"
                android:layout_below="@id/bookDescTitle"
                android:padding="7dp"/>

            <TextView
                android:id="@+id/txtAuthorName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/author_name"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="#000000"
                android:layout_below="@+id/txtbookDesc"
                android:padding="7dp"/>
            <TextView
                android:id="@+id/txtPublisherName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/publisher_name"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="#000000"
                android:layout_below="@id/txtAuthorName"
                android:padding="7dp"/>
            <TextView
                android:id="@+id/txtPageCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/page_count"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="#000000"
                android:layout_below="@id/txtPublisherName"
                android:padding="7dp"/>
            <TextView
                android:id="@+id/txtLanguage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/language"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="#000000"
                android:layout_below="@id/txtPageCount"
                android:padding="7dp"/>
            <TextView
                android:id="@+id/txtCost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cost"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_below="@id/txtLanguage"
                android:textColor="#000000"
                android:padding="7dp"/>
            <TextView
                android:id="@+id/txtBuyLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buyLink"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="#2196F3"
                android:layout_below="@id/txtCost"
                android:drawableRight="@drawable/ic_copy"
                android:padding="7dp"/>

        </RelativeLayout>
    </RelativeLayout>
    </ScrollView>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        android:id="@+id/ProgressLayout">
        <ProgressBar
            android:id="@+id/ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"/>
    </RelativeLayout>
</RelativeLayout>